--- a/index.html
+++ b/index.html
@@ -7,28 +7,33 @@
     <meta name="author" content="Jennifer Fromanger">
     <title>Lilovore</title>
     <link rel="stylesheet" media="screen" href="style.css" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2&display=swap" rel="stylesheet">
 </head>
 <body>
+
     <header>
-        <button type="button" id="hamburger">
-            <img src="images/hamburger.png" alt="menu de navigation" />
-        </button>
-        <h1>Lilovore</h1>
+        <div id="burgerAlign">
+            <button type="button" id="hamburger">
+                <img src="images/hamburger.png" alt="menu de navigation" />
+            </button>
+            <h1>Lilovore</h1>
+        </div>
+
         <img src="images/logo.png" alt="dessin de Lilovore, le dinosaure gourmand" id="logo" />
 
     </header>
-
+    
     <section>
         <img src="" alt="photo de Lille" />
         <h2>Lilovore vous dévoile ses pépites!</h2>
         <p>Trouvez le meilleur restaurant Lillois en fonction de vos envies.</p>
     </section>
 
-    <section>
-
-    </section>
-
     <main>
+
+        <section>
+
+        </section>
 
     </main>
 
