--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Lilovore</title>
     <link rel="stylesheet" media="screen" href="style.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2&display=swap" rel="stylesheet">
+    <link rel="stylesheet" media="screen" href="desktop.css" type="text/css" />
 </head>
 <body>
 
@@ -19,12 +20,18 @@
             <h1>Lilovore</h1>
         </div>
 
+        <nav id="navDesk">
+            <ul>
+                <li><a href="">Vos envies</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#a_propos">A propos</a></li>
+            </ul>
+        </nav>
         <img src="images/logo.png" alt="dessin de Lilovore, le dinosaure gourmand" id="logo" />
 
     </header>
     
-    <section>
-        <img src="" alt="photo de Lille" />
+    <section id="carousel">
         <h2>Lilovore vous dévoile ses pépites!</h2>
         <p>Trouvez le meilleur restaurant Lillois en fonction de vos envies.</p>
     </section>
