end header and carousel

--- a/index.html
+++ b/index.html
@@ -31,9 +31,21 @@
 
     </header>
     
+    <section id="deroulantBurger">
+        <nav>
+            <ul>
+                <li><a href="">Vos envies</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#a_propos">A propos</a></li>
+            </ul>
+        </nav>
+    </section>
+
     <section id="carousel">
-        <h2>Lilovore vous dévoile ses pépites!</h2>
-        <p>Trouvez le meilleur restaurant Lillois en fonction de vos envies.</p>
+        <div id="bandeau">
+            <h2>Lilovore vous dévoile ses pépites!</h2>
+            <p>Trouvez le meilleur restaurant Lillois en fonction de vos envies.</p>
+        </div>
     </section>
 
     <main>
