main in progress

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <nav id="navDesk">
             <ul>
-                <li><a href="">Vos envies</a></li>
+                <li><a href="#listEnvies">Vos envies</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#a_propos">A propos</a></li>
             </ul>
@@ -31,16 +31,16 @@
 
     </header>
     
-    <section id="deroulantBurger">
+    <div id="deroulantBurger">
         <nav>
             <ul>
-                <li><a href="">Vos envies</a></li>
+                <li><a href="#listEnvies">Vos envies</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="#a_propos">A propos</a></li>
             </ul>
         </nav>
-    </section>
-
+    </div>
+    <div id="separation"></div>
     <section id="carousel">
         <div id="bandeau">
             <h2>Lilovore vous dévoile ses pépites!</h2>
@@ -50,8 +50,34 @@
 
     <main>
 
-        <section>
-
+        <section id="listEnvies">
+            <h2>Vos Envies</h2> 
+            <div id="grid">
+                <div class="envie">
+                    <img src="images/burger.png" alt="photo de hamburger" />
+                    <h3>Burger</h3>
+                </div>
+                <div class="envie">
+                    <img src="images/viande.png" alt="photo de viande"/>
+                    <h3>Bonne viande</h3>
+                </div>
+                <div class="envie">
+                    <img src="images/poisson.png" alt="photo de poisson"/>
+                    <h3>Poisson</h3>
+                </div>
+                <div class="envie">
+                    <img src="images/pizza.png" alt="photo de pizza"/>
+                    <h3>Pizza</h3>
+                </div>
+                <div class="envie">
+                    <img src="images/brunch.png" alt="photo de brunch"/>
+                    <h3>Brunch</h3>
+                </div>
+                <div class="envie">
+                    <img src="images/gateau.png" alt="photo de cup cake"/>
+                    <h3>Les becs sucrés</h3>
+                </div>
+            </div>
         </section>
 
     </main>
