--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Lilovore</title>
     <link rel="stylesheet" media="screen" href="style.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2&display=swap" rel="stylesheet">
+    <link rel="stylesheet" media="screen" href="medium.css" type="text/css" />
     <link rel="stylesheet" media="screen" href="desktop.css" type="text/css" />
 </head>
 <body>
@@ -34,9 +35,9 @@
     <div id="deroulantBurger">
         <nav>
             <ul>
-                <li><a href="#listEnvies">Vos envies</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#a_propos">A propos</a></li>
+                <li><a href="#listEnvies" class="closeClic">Vos envies</a></li>
+                <li><a href="#contact" class="closeClic">Contact</a></li>
+                <li><a href="#a_propos" class="closeClic">A propos</a></li>
             </ul>
         </nav>
     </div>
@@ -54,28 +55,40 @@
             <h2>Vos Envies</h2> 
             <div id="grid">
                 <div class="envie">
-                    <img src="images/burger.png" alt="photo de hamburger" />
-                    <h3>Burger</h3>
+                    <a href="">
+                        <img src="images/burger.png" alt="photo de hamburger" />
+                        <h3>Burger</h3>
+                    </a>
                 </div>
                 <div class="envie">
-                    <img src="images/viande.png" alt="photo de viande"/>
-                    <h3>Bonne viande</h3>
+                    <a href="">
+                        <img src="images/viande.png" alt="photo de viande"/>
+                        <h3>Bonne viande</h3>
+                    </a>
                 </div>
                 <div class="envie">
-                    <img src="images/poisson.png" alt="photo de poisson"/>
-                    <h3>Poisson</h3>
+                    <a href="">
+                        <img src="images/poisson.png" alt="photo de poisson"/>
+                        <h3>Poisson</h3>
+                    </a>
                 </div>
                 <div class="envie">
-                    <img src="images/pizza.png" alt="photo de pizza"/>
-                    <h3>Pizza</h3>
+                    <a href="">
+                        <img src="images/pizza.png" alt="photo de pizza"/>
+                        <h3>Pizza</h3>
+                    </a>
                 </div>
                 <div class="envie">
-                    <img src="images/brunch.png" alt="photo de brunch"/>
-                    <h3>Brunch</h3>
+                    <a href="">
+                        <img src="images/brunch.png" alt="photo de brunch"/>
+                        <h3>Brunch</h3>
+                    </a>
                 </div>
                 <div class="envie">
+                    <a href="">
                     <img src="images/gateau.png" alt="photo de cup cake"/>
                     <h3>Les becs sucrés</h3>
+                    </a>
                 </div>
             </div>
         </section>
@@ -83,7 +96,24 @@
     </main>
 
     <footer>
-
+        <div class="footer">
+            <a href="index.html">
+                <h2>Lilovore</h2>
+                <img src="images/homepage.png" alt="retour à la page d'acceuil" />
+            </a>
+        </div>
+        <div class="footer">
+            <a href="">
+                <p>A propos de Lilovore</p>
+                <img src="images/aPropos.png" alt="A propos de Lilovore" />
+            </a>
+        </div>
+        <div class="footer">
+            <a href="">
+                <p>Nous contacter</p>
+                <img src="images/contact.png" alt="contactez Lilovore" />
+            </a>
+        </div>
     </footer>
 <script src="header.js"></script>    
 </body>
