--- a/index.html
+++ b/index.html
@@ -1,120 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="content" content="Site qui répértorie les restaurants Lillois en fonction de l'aliment recherché">
-    <meta name="author" content="Jennifer Fromanger">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="content"
+      content="Site qui répértorie les restaurants Lillois en fonction de l'aliment recherché"
+    />
+    <meta name="author" content="Jennifer Fromanger" />
     <title>Lilovore</title>
     <link rel="stylesheet" media="screen" href="style.css" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Da+2&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Baloo+Da+2&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" media="screen" href="medium.css" type="text/css" />
     <link rel="stylesheet" media="screen" href="desktop.css" type="text/css" />
-</head>
-<body>
-
+  </head>
+  <body>
     <header>
-        <div id="burgerAlign">
-            <button type="button" id="hamburger">
-                <img src="images/hamburger.png" alt="menu de navigation" />
-            </button>
-            <h1>Lilovore</h1>
-        </div>
+      <div id="burgerAlign">
+        <button type="button" id="hamburger">
+          <img src="images/hamburger.png" alt="menu de navigation" />
+        </button>
+        <h1>Lilovore</h1>
+      </div>
 
-        <nav id="navDesk">
-            <ul>
-                <li><a href="#listEnvies">Vos envies</a></li>
-                <li><a href="#contact">Contact</a></li>
-                <li><a href="#a_propos">A propos</a></li>
-            </ul>
-        </nav>
-        <img src="images/logo.png" alt="dessin de Lilovore, le dinosaure gourmand" id="logo" />
-
+      <nav id="navDesk">
+        <ul>
+          <li><a href="#listEnvies">Vos envies</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#a_propos">A propos</a></li>
+        </ul>
+      </nav>
+      <img
+        src="images/logo.png"
+        alt="dessin de Lilovore, le dinosaure gourmand"
+        id="logo"
+      />
     </header>
-    
+
     <div id="deroulantBurger">
-        <nav>
-            <ul>
-                <li><a href="#listEnvies" class="closeClic">Vos envies</a></li>
-                <li><a href="#contact" class="closeClic">Contact</a></li>
-                <li><a href="#a_propos" class="closeClic">A propos</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="#listEnvies" class="closeClic">Vos envies</a></li>
+          <li><a href="#contact" class="closeClic">Contact</a></li>
+          <li><a href="#a_propos" class="closeClic">A propos</a></li>
+        </ul>
+      </nav>
     </div>
     <div id="separation"></div>
     <section id="carousel">
-        <div id="bandeau">
-            <h2>Lilovore vous dévoile ses pépites!</h2>
-            <p>Trouvez le meilleur restaurant Lillois en fonction de vos envies.</p>
-        </div>
+      <div id="bandeau">
+        <h2>Lilovore vous dévoile ses pépites!</h2>
+        <p>Trouvez le meilleur restaurant Lillois en fonction de vos envies.</p>
+      </div>
     </section>
 
     <main>
-
-        <section id="listEnvies">
-            <h2>Vos Envies</h2> 
-            <div id="grid">
-                <div class="envie">
-                    <a href="">
-                        <img src="images/burger.png" alt="photo de hamburger" />
-                        <h3>Burger</h3>
-                    </a>
-                </div>
-                <div class="envie">
-                    <a href="">
-                        <img src="images/viande.png" alt="photo de viande"/>
-                        <h3>Bonne viande</h3>
-                    </a>
-                </div>
-                <div class="envie">
-                    <a href="">
-                        <img src="images/poisson.png" alt="photo de poisson"/>
-                        <h3>Poisson</h3>
-                    </a>
-                </div>
-                <div class="envie">
-                    <a href="">
-                        <img src="images/pizza.png" alt="photo de pizza"/>
-                        <h3>Pizza</h3>
-                    </a>
-                </div>
-                <div class="envie">
-                    <a href="">
-                        <img src="images/brunch.png" alt="photo de brunch"/>
-                        <h3>Brunch</h3>
-                    </a>
-                </div>
-                <div class="envie">
-                    <a href="">
-                    <img src="images/gateau.png" alt="photo de cup cake"/>
-                    <h3>Les becs sucrés</h3>
-                    </a>
-                </div>
-            </div>
-        </section>
-
+      <section id="listEnvies">
+        <h2>Vos Envies</h2>
+        <div id="grid">
+          <div class="envie">
+            <a href="burger.html">
+              <img src="images/burger.png" alt="photo de hamburger" />
+              <h3>Burger</h3>
+            </a>
+          </div>
+          <div class="envie">
+            <a href="viande.html">
+              <img src="images/viande.png" alt="photo de viande" />
+              <h3>Bonne viande</h3>
+            </a>
+          </div>
+          <div class="envie">
+            <a href="poisson.html">
+              <img src="images/poisson.png" alt="photo de poisson" />
+              <h3>Poisson</h3>
+            </a>
+          </div>
+          <div class="envie">
+            <a href="pizza.html">
+              <img src="images/pizza.png" alt="photo de pizza" />
+              <h3>Pizza</h3>
+            </a>
+          </div>
+          <div class="envie">
+            <a href="brunch.html">
+              <img src="images/brunch.png" alt="photo de brunch" />
+              <h3>Brunch</h3>
+            </a>
+          </div>
+          <div class="envie">
+            <a href="gateau.html">
+              <img src="images/gateau.png" alt="photo de cup cake" />
+              <h3>Les becs sucrés</h3>
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
-        <div class="footer">
-            <a href="index.html">
-                <h2>Lilovore</h2>
-                <img src="images/homepage.png" alt="retour à la page d'acceuil" />
-            </a>
-        </div>
-        <div class="footer">
-            <a href="">
-                <p>A propos de Lilovore</p>
-                <img src="images/aPropos.png" alt="A propos de Lilovore" />
-            </a>
-        </div>
-        <div class="footer">
-            <a href="">
-                <p>Nous contacter</p>
-                <img src="images/contact.png" alt="contactez Lilovore" />
-            </a>
-        </div>
+      <div class="footer">
+        <a href="index.html">
+          <h2>Lilovore</h2>
+          <img src="images/homepage.png" alt="retour à la page d'acceuil" />
+        </a>
+      </div>
+      <div class="footer">
+        <a href="">
+          <p>A propos de Lilovore</p>
+          <img src="images/aPropos.png" alt="A propos de Lilovore" />
+        </a>
+      </div>
+      <div class="footer">
+        <a href="">
+          <p>Nous contacter</p>
+          <img src="images/contact.png" alt="contactez Lilovore" />
+        </a>
+      </div>
     </footer>
-<script src="header.js"></script>    
-</body>
+    <script src="header.js"></script>
+  </body>
 </html>
